syntax = "proto3";

package rpc;

service Rpc {
  // request encryption and aggregation keys for the network/universe
  rpc Preprocess (PreprocessRequest) returns (PreprocessResponse);
  
  // request a partial decryption from a node
  rpc Partdec (PartDecRequest) returns (PartDecResponse);

  // coordinator fans out and aggregates
  rpc AggregateDecrypt(AggregateDecryptRequest) returns (AggregateDecryptResponse);
}

// request preprocess params from a node (ak, ek) for encryption and decryptiopn
message PreprocessRequest { }
// the response type
message PreprocessResponse {
  string hex_serialized_sys_key = 1;
}

// request a partial decryption from a node
message PartDecRequest {
  string filename = 1;
  string witness_hex = 2;
}
// the partial decryption response
message PartDecResponse {
  string hex_serialized_decryption = 1;
}

// request partial decryption aggregation
message AggregateDecryptRequest {
    string ciphertext_hex = 1;
    string content_id = 2;
    string witness_hex = 3;
    // num shares needed
    uint32 threshold = 4;
}

message AggregateDecryptResponse {
    string plaintext_hex = 1;
}
